playground/js_examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    #    owner: "me"
    env: "prod"
